Set up UI components + Set up RV adapter + Ready to go

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,5 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="colorOnSurface">@color/white</item>
+
+        <item name="colorContainer">@color/c_card_night_background</item>
+        <item name="colorOnContainer">@color/c_card_night_foreground</item>
     </style>
 </resources>
