--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,10 @@
     <color name="c_input">#8395a7</color>
     <color name="c_error">#eb3b5a</color>
 
+    <color name="c_card_light_background">#26A4B0BE</color>
+    <color name="c_card_light_foreground">#FFFFFF</color>
+
+    <color name="c_card_night_background">#151515</color>
+    <color name="c_card_night_foreground">#101010</color>
+
 </resources>
