--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
+        <item name="colorContainer">@color/c_card_light_background</item>
+        <item name="colorOnContainer">@color/c_card_light_foreground</item>
     </style>
 </resources>
