--- a/app/src/main/res/layout/card_quote_details.xml
+++ b/app/src/main/res/layout/card_quote_details.xml
@@ -1,64 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        app:cardCornerRadius="@dimen/_5sdp"
+        app:cardBackgroundColor="?attr/colorOnContainer"
+        app:cardCornerRadius="@dimen/_8sdp"
         app:cardElevation="0dp"
-        app:cardBackgroundColor="?attr/colorOnContainer">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="15dp">
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="20dp">
+
             <TextView
                 android:id="@+id/anime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="anime"
-                android:textStyle="bold"
-                android:textSize="@dimen/_16sdp"
                 android:textColor="?attr/colorOnSurface"
-                />
+                android:textSize="@dimen/_16sdp"
+                android:textStyle="bold" />
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="10dp"/>
+                android:layout_height="10dp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:background="?attr/colorContainer"/>
+                android:background="?attr/colorContainer" />
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="10dp"/>
+                android:layout_height="10dp" />
+
             <TextView
                 android:id="@+id/quote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorOnSurface"
                 android:text="quote"
-                android:textSize="@dimen/_14sdp"
-                />
+                android:textColor="?attr/colorOnSurface"
+                android:textSize="@dimen/_14sdp" />
+
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="20dp"/>
+                android:layout_height="20dp" />
+
             <TextView
                 android:id="@+id/character"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_14sdp"
-                android:text="character"
                 android:gravity="end|center"
-                />
+                android:text="character"
+                android:textSize="@dimen/_14sdp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
