--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.Cmo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">@color/c_primary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
@@ -16,5 +16,8 @@
 
         <item name="colorContainer">@color/c_card_night_background</item>
         <item name="colorOnContainer">@color/c_card_night_foreground</item>
+
+        <item name="colorPrimarySurface">@color/c_primary_bg</item>
+        <item name="colorOnPrimarySurface">@color/c_primary</item>
     </style>
 </resources>
