--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <!--    custom colors :-->
     <color name="c_transparent">#00000000</color>
     <color name="c_primary">#4b7bec</color>
+    <color name="c_primary_bg">#1F4B7BEC</color>
     <color name="c_input">#8395a7</color>
     <color name="c_error">#eb3b5a</color>
 
