Search UI and Search Logic are settled + Code and UI enhancements. Next : Collections

--- a/app/src/main/res/drawable/draw_rect_rounded.xml
+++ b/app/src/main/res/drawable/draw_rect_rounded.xml
@@ -3,8 +3,8 @@
 
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="10dp"/>
-            <solid android:color="@color/c_searchbox_bg"/>
+            <corners android:radius="100dp"/>
+            <solid android:color="?attr/colorSurface"/>
         </shape>
     </item>
 
