--- a/app/src/main/res/layout/fragment_remote_quotes.xml
+++ b/app/src/main/res/layout/fragment_remote_quotes.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.ui.fragments.RemoteQuotesFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe"
+        android:id="@+id/remote_swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,7 +18,7 @@
             android:paddingHorizontal="15dp">
 
             <LinearLayout
-                android:id="@+id/recycler_container"
+                android:id="@+id/remote_fetching_results_wrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -26,7 +26,7 @@
                 android:visibility="gone">
 
                 <TextView
-                    android:id="@+id/fragment_title"
+                    android:id="@+id/remote_fragment_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start|center"
@@ -36,7 +36,7 @@
                     android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler"
+                    android:id="@+id/remote_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -46,13 +46,13 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <FrameLayout
-        android:id="@+id/progress_error_container"
+        android:id="@+id/remote_fetching_progress_wrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
         <LinearLayout
-            android:id="@+id/progress"
+            android:id="@+id/remote_progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:text="Hold on a moment !"
+                android:text="@string/app_fetching_progress_title"
                 android:textColor="?attr/colorOnSurface"
                 android:textSize="@dimen/_16sdp"
                 android:textStyle="bold" />
@@ -77,19 +77,37 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="We are getting it for you 😁"
+                android:text="@string/app_fetching_progress_subtitle"
                 android:textColor="?attr/colorOnSurface"
                 android:textSize="@dimen/_14sdp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/error"
+        <LinearLayout
+            android:id="@+id/remote_views_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:gravity="center"
-            android:text="Something went wrong"
-            android:visibility="gone" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/remote_error_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:gravity="center"
+                android:text="@string/app_fetching_progress_error"
+                android:textColor="?attr/colorOnSurface"
+                />
+
+            <TextView
+                android:id="@+id/remote_empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:gravity="center"
+                android:text="@string/app_fetching_progress_empty"
+                android:textColor="?attr/colorOnSurface"
+                />
+        </LinearLayout>
     </FrameLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -102,6 +120,7 @@
         android:backgroundTint="?attr/colorPrimary"
         android:src="@drawable/ic_refresh"
         android:visibility="gone"
-        app:tint="?attr/colorOnSurface" />
+        app:tint="?attr/colorOnSurface"
+        android:contentDescription="@string/app_refresh_fab_content_description" />
 
 </FrameLayout>
