--- a/app/src/main/res/layout/card_quote_details.xml
+++ b/app/src/main/res/layout/card_quote_details.xml
@@ -27,7 +27,7 @@
                 android:gravity="center_vertical">
                 <TextView
                     android:id="@+id/anime"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="anime"
