--- a/app/src/main/res/layout/fragment_search_quotes.xml
+++ b/app/src/main/res/layout/fragment_search_quotes.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.ui.fragments.SearchQuotesFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe"
+        android:id="@+id/search_swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,46 +18,73 @@
             android:paddingHorizontal="15dp">
 
             <LinearLayout
-                android:id="@+id/recycler_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingTop="60dp"
-                android:visibility="gone">
+                android:paddingTop="60dp">
 
                 <LinearLayout
+                    android:id="@+id/search_wrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginBottom="40dp"
+                    >
+                    <EditText
+                        android:id="@+id/search_box"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:hint="@string/app_search_query_hint"
+                        android:background="@drawable/draw_rect_rounded"
+                        android:textSize="16sp"
+                        android:paddingHorizontal="15dp"
+                        android:inputType="text"
+                        android:textColor="?attr/colorOnSurface"
+                        />
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/search_icon_wrapper"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="100dp"
+                        android:layout_marginStart="10dp"
+                        android:backgroundTint="?attr/colorSurface"
+                        app:cardElevation="0dp"
+                        >
+                        <ImageView
+                            android:id="@+id/search_icon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_menu_search"
+                            android:padding="15dp"
+                            app:tint="?attr/colorOnSurface"
+                            android:scaleType="centerInside"
+                            />
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/search_fetching_results_wrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginBottom="15dp"
+                    android:visibility="gone"
                     >
-                    <androidx.appcompat.widget.SearchView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:queryHint="Enter an anime name"
-                        android:background="@drawable/draw_rect_rounded"
-                        android:layout_marginBottom="5dp"
-                        />
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Please enter ANIME or CHARACTER before your query"
-                        />
+                        android:gravity="start|center"
+                        android:text="@string/app_fragment_search_quotes_title"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textSize="@dimen/_25sdp"
+                        android:textStyle="bold" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/search_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start|center"
-                    android:text="@string/app_fragment_remote_quotes_title"
-                    android:textColor="?attr/colorOnSurface"
-                    android:textSize="@dimen/_25sdp"
-                    android:textStyle="bold" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -65,13 +92,13 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <FrameLayout
-        android:id="@+id/progress_error_container"
+        android:id="@+id/search_fetching_progress_wrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
         <LinearLayout
-            android:id="@+id/progress"
+            android:id="@+id/search_progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -88,7 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:text="Hold on a moment !"
+                android:text="@string/app_fetching_progress_title"
                 android:textColor="?attr/colorOnSurface"
                 android:textSize="@dimen/_16sdp"
                 android:textStyle="bold" />
@@ -96,19 +123,37 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="We are getting it for you 😁"
+                android:text="@string/app_fetching_progress_subtitle"
                 android:textColor="?attr/colorOnSurface"
                 android:textSize="@dimen/_14sdp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/error"
+        <LinearLayout
+            android:id="@+id/search_views_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:gravity="center"
-            android:text="Something went wrong"
-            android:visibility="gone" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/search_error_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:gravity="center"
+                android:text="@string/app_fetching_progress_error"
+                android:textColor="?attr/colorOnSurface"
+                />
+
+            <TextView
+                android:id="@+id/search_empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:gravity="center"
+                android:text="@string/app_fetching_progress_empty"
+                android:textColor="?attr/colorOnSurface"
+                />
+        </LinearLayout>
     </FrameLayout>
 
 </FrameLayout>
