--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="c_primary_bg">#1F4B7BEC</color>
     <color name="c_input">#8395a7</color>
     <color name="c_error">#eb3b5a</color>
+    <color name="c_error_bg">#1FEB3B5A</color>
 
     <color name="c_searchbox_bg">#1F8395A7</color>
 
