--- a/app/src/main/res/layout/fragment_search_quotes.xml
+++ b/app/src/main/res/layout/fragment_search_quotes.xml
@@ -24,44 +24,59 @@
                 android:paddingTop="60dp">
 
                 <LinearLayout
-                    android:id="@+id/search_wrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center"
+                    android:orientation="vertical"
                     android:layout_marginBottom="40dp"
                     >
-                    <EditText
-                        android:id="@+id/search_box"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="match_parent"
-                        android:hint="@string/app_search_query_hint"
-                        android:background="@drawable/draw_rect_rounded"
-                        android:textSize="16sp"
-                        android:paddingHorizontal="15dp"
-                        android:inputType="text"
-                        android:textColor="?attr/colorOnSurface"
-                        />
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/search_icon_wrapper"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/search_wrapper"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardCornerRadius="100dp"
-                        android:layout_marginStart="10dp"
-                        android:backgroundTint="?attr/colorSurface"
-                        app:cardElevation="0dp"
+                        android:orientation="horizontal"
+                        android:gravity="center"
                         >
-                        <ImageView
-                            android:id="@+id/search_icon"
+                        <EditText
+                            android:id="@+id/search_box"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="match_parent"
+                            android:hint="@string/app_search_query_hint"
+                            android:background="@drawable/draw_rect_rounded"
+                            android:paddingHorizontal="@dimen/_14sdp"
+                            android:inputType="text"
+                            android:textColor="?attr/colorOnSurface"
+                            />
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/search_icon_wrapper"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_menu_search"
-                            android:padding="15dp"
-                            app:tint="?attr/colorOnSurface"
-                            android:scaleType="centerInside"
-                            />
-                    </androidx.cardview.widget.CardView>
+                            app:cardCornerRadius="100dp"
+                            android:layout_marginStart="@dimen/_10sdp"
+                            android:backgroundTint="?attr/colorSurface"
+                            app:cardElevation="0dp"
+                            >
+                            <ImageView
+                                android:id="@+id/search_icon"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_menu_search"
+                                android:padding="@dimen/_12sdp"
+                                app:tint="?attr/colorOnSurface"
+                                android:scaleType="centerInside"
+                                />
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/search_empty_query_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_fetching_progress_error_empty_query"
+                        android:textColor="@color/c_error"
+                        android:textSize="@dimen/_13sdp"
+                        android:gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
