--- a/app/src/main/res/layout/card_quote_details.xml
+++ b/app/src/main/res/layout/card_quote_details.xml
@@ -55,7 +55,7 @@
                         android:scaleType="centerCrop"
                         android:scaleX=".9"
                         android:scaleY=".9"
-                        />
+                        android:contentDescription="Bookmark" />
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
 
@@ -66,7 +66,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:background="?attr/colorContainer" />
+                android:background="?attr/colorSurfaceVariant" />
 
             <Space
                 android:layout_width="match_parent"
