--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/app_menu_remote"
-        android:icon="@drawable/ic_menu_remote"
+    <item
         android:id="@+id/menu_remote"
         android:checked="true"
-        />
-    <item android:title="@string/app_menu_search"
-        android:icon="@drawable/ic_menu_search"
-        android:id="@+id/menu_search"
-        />
-    <item android:title="@string/app_menu_saved"
+        android:icon="@drawable/ic_menu_remote"
+        android:title="@string/menu_remote" />
+    <item
+        android:id="@+id/menu_bookmark"
         android:icon="@drawable/ic_menu_bookmark"
-        android:id="@+id/menu_bookmark"/>
+        android:title="@string/menu_saved" />
 
 </menu>
