--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Cmo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Cmo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/c_primary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,13 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="colorOnSurface">@color/white</item>
-
-        <item name="colorContainer">@color/c_card_night_background</item>
-        <item name="colorOnContainer">@color/c_card_night_foreground</item>
-
+        <item name="colorSurfaceVariant">@color/c_abs_parent_night</item>
+        <item name="colorSurface">@color/c_card_night</item>
         <item name="colorPrimarySurface">@color/c_primary_bg</item>
-        <item name="colorOnPrimarySurface">@color/c_primary</item>
-
     </style>
 </resources>
