--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,10 +18,10 @@
 
     <color name="c_searchbox_bg">#1F8395A7</color>
 
-    <color name="c_card_light_background">#26A4B0BE</color>
-    <color name="c_card_light_foreground">#FFFFFF</color>
+    <color name="c_abs_parent_light">#26A4B0BE</color>
+    <color name="c_card_light">#FFFFFF</color>
 
-    <color name="c_card_night_background">#171717</color>
-    <color name="c_card_night_foreground">#101010</color>
+    <color name="c_abs_parent_night">#171717</color>
+    <color name="c_card_night">#101010</color>
 
 </resources>
