--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Cmo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Cmo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/c_primary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,13 +10,10 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-
-        <item name="colorContainer">@color/c_card_light_background</item>
-        <item name="colorOnContainer">@color/c_card_light_foreground</item>
-
+        <item name="colorSurfaceVariant">@color/c_abs_parent_light</item>
+        <item name="colorSurface">@color/c_card_light</item>
         <item name="colorPrimarySurface">@color/c_primary_bg</item>
-        <item name="colorOnPrimarySurface">@color/c_primary</item>
     </style>
 </resources>
