--- a/app/src/main/res/layout/_toolbar.xml
+++ b/app/src/main/res/layout/_toolbar.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/colorSurface"
     android:paddingHorizontal="@dimen/_10sdp"
+    app:elevation="0dp"
     >
 
     <LinearLayout
