--- a/app/src/main/res/drawable/draw_rectangle_rounded_bordered.xml
+++ b/app/src/main/res/drawable/draw_rectangle_rounded_bordered.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:opacity="opaque">
+    <item>
+        <bitmap
+            android:alpha=".8"
+            android:src="@drawable/collection_bg" />
+    </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/c_transparent" />
-            <stroke android:width="1dp" android:color="@color/c_input" />
-            <corners android:radius="5dp" />
+            <gradient
+                android:angle="0"
+                android:endColor="?attr/colorSecondary"
+                android:startColor="?attr/colorSurfaceVariant" />
+            <!--            <solid android:color="?attr/colorSecondary" />-->
         </shape>
     </item>
-</selector>
+</layer-list>
