--- a/app/src/main/res/layout/_empty.xml
+++ b/app/src/main/res/layout/_empty.xml
@@ -6,6 +6,7 @@
     android:gravity="center"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
         />
 
     <TextView
+        android:id="@+id/empty_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/empty_subtitle"
