--- a/app/src/main/res/layout/card_quote.xml
+++ b/app/src/main/res/layout/card_quote.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        app:cardBackgroundColor="?attr/colorOnContainer"
+        app:cardBackgroundColor="?attr/colorSurface"
         app:cardCornerRadius="@dimen/_8sdp"
         app:cardElevation="0dp"
         app:layout_constraintTop_toTopOf="parent">
@@ -55,7 +55,7 @@
                         android:scaleType="centerCrop"
                         android:scaleX=".9"
                         android:scaleY=".9"
-                        android:contentDescription="Bookmark" />
+                        android:contentDescription="@string/cd_bookmark" />
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
 
