--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,14 +6,15 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/c_harmony_bg_light</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/c_harmony_light</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="colorSurfaceVariant">@color/c_abs_parent_light</item>
         <item name="colorSurface">@color/c_card_light</item>
         <item name="colorPrimarySurface">@color/c_primary_bg</item>
+        <item name="colorAccent">@color/c_accent_bg_light</item>
     </style>
 </resources>
